--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             const list = ["ROCK", "PAPER", "SCISSORS"];
 
             function computerPlay() {
-                return list[Math.floor(Math.random()*3)]
+                return list[Math.floor(Math.random()*3)];
             }
 
             function playRound(playerSelection, computerSelection) {
@@ -30,12 +30,12 @@
             }
 
             function game() {
-                let playerScore = 0
-                let playerSelection
-                let computerSelection
+                let playerScore = 0;
+                let playerSelection;
+                let computerSelection;
                 for (let i = 1; i<= 5; i++) {
                     computerSelection = computerPlay();
-                    playerSelection = prompt('Enter Selection: ')
+                    playerSelection = prompt('Enter Selection: ');
                     result = playRound(playerSelection,computerSelection);
                     playerScore += result;
                     if (result === 0) console.log("Tie! You both chose " + playerSelection);
